CI yml file updated

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,3 +23,6 @@ jobs:
     - name: Install pytest
       run: |
             pip install pytest
+    - name: Run tests with pytest
+      run: |
+            pytest
