--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Install pytest
       run: |
             pip install pytest
+    - name: Install pytest-mock
+      run: |
+            pip install pytest-mock
     - name: Run tests with pytest
       run: |
             pytest
