--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -20,12 +20,9 @@ jobs:
       run: |
             python -m pip install --upgrade pip
             pip install -r ./requirements.txt
-    - name: Install pytest
-      run: |
-            pip install pytest
-    - name: Install pytest-mock
-      run: |
-            pip install pytest-mock
     - name: Run tests with pytest
       run: |
             pytest
+    - name: Run flake8
+      run: |
+            flake8
